--- a/seice/core/templates/pedagogia-seice.html
+++ b/seice/core/templates/pedagogia-seice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEICE - Sistema de Presença e Carga de Estagiários</title>
+    <title>SEICE | Sistema de Presença e Carga de Estagiários | Pedagogia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +13,13 @@
             --primary-color: #4a5568;
             --primary-light: #000000;
             --primary-dark: #010711;
-            --accent-color: #f6e05e;
+            --accent-color: #ebce2c;
             --accent-light: #faf089;
             --accent-dark: #d69e2e;
             --secondary-color: #e2e8f0;
-            --danger-color: #e53e3e;
-            --success-color: #38a169;
-            --warning-color: #d69e2e;
+            --danger-color: #cc2626;
+            --success-color: #1f8a51;
+            --warning-color: #dfa737;
             --info-color: #3182ce;
             --white: #ffffff;
             --gray-50: #f9fafb;
@@ -29,9 +29,9 @@
             --gray-400: #cbd5e0;
             --gray-500: #a0aec0;
             --gray-600: #718096;
-            --gray-700: #000000;
-            --gray-800: #000000;
-            --gray-900: #000205;
+            --gray-700: #141313;
+            --gray-800: #302c2c;
+            --gray-900: #06080a;
             --text-color: var(--gray-800);
             --text-light: var(--gray-600);
             --bg-color: var(--gray-50);
@@ -438,6 +438,13 @@
             font-weight: 600;
         }
 
+        .area-name{
+            color: var(--gray-100);
+            font-size: 15px;
+            margin-top: 2px;
+            font-weight: 400;
+        }
+
         .close {
             color: var(--gray-500);
             font-size: 24px;
@@ -560,8 +567,9 @@
 <body>
     <div class="sidebar">
         <div class="logo">
-            <i class="fas fa-clock"></i>
+            <i class="fas fa-user-graduate"></i>
             <h2>SEICE</h2>
+            <p class="area-name">Pedagogia</p>
         </div>
         <nav>
             <ul>
