--- a/seice/core/templates/pedagogia-seice.html
+++ b/seice/core/templates/pedagogia-seice.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEICE | Sistema de Presença e Carga de Estagiários | Pedagogia</title>
+    <meta name="viewport" content="width=device-width, in1itial-scale=1.0">
+    <title>SEICE | Sistema de Presença e Carga de Estagiários - Pedagogia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
